objects/EUR_CRM_Visit__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_AccGroupoutlettype__c</fullName>
        <formula>IF(
ISBLANK(
  EUR_CRM_Account__r.EUR_CRM_Group_Outlet_Type_Name__c), EUR_CRM_Account__r.EUR_CRM_PRS_Group_Outlet_Type__r.EUR_CRM_Name__c ,  EUR_CRM_Account__r.EUR_CRM_Group_Outlet_Type_Name__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AccOutlettype__c</fullName>
        <formula>IF(
ISBLANK(EUR_CRM_Account__r.EUR_CRM_Outlet_Type_Name__c),  EUR_CRM_Account__r.EUR_CRM_PRS_Outlet_Type__r.EUR_CRM_PRS_Outlet_Type_Name__c, EUR_CRM_Account__r.EUR_CRM_Outlet_Type_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_AccountAddress__c</fullName>
        <formula>IF(
AND(ISBLANK(EUR_CRM_Account__r.EUR_CRM_Street__c),ISBLANK(EUR_CRM_Account__r.EUR_CRM_Building_Number__c)),EUR_CRM_Account__r.EUR_CRM_City__c, 
EUR_CRM_Account__r.EUR_CRM_Street__c+&apos; &apos;+ EUR_CRM_Account__r.EUR_CRM_Building_Number__c + &apos;,&apos;+&apos; &apos;+EUR_CRM_Account__r.EUR_CRM_City__c+&apos; &apos;+ EUR_CRM_Account__r.EUR_CRM_Postal_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account_Name__c</fullName>
        <formula>EUR_CRM_Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Actual_Time_Spent__c</fullName>
        <formula>IF(
  (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c) &gt; 0 ,
  if(FLOOR( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)) &gt; 0, TEXT( FLOOR( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)) ) &amp; &quot; days &quot;,&quot;&quot;)
  &amp; if(FLOOR( MOD( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)* 24, 24 ) ) &gt; 0, TEXT( FLOOR( MOD( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)* 24, 24 ) ) ) &amp; &quot; hours &quot;,&quot;&quot;)
  &amp; TEXT( ROUND( MOD( (EUR_CRM_End_Datetime__c - EUR_CRM_Start_Datetime__c)* 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Time Spent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Assistant_Visitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up for a  Sales rep who is in effect a User</description>
        <label>Assistant Visitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Visit_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cancellation_Reason__c</fullName>
        <description>Cancellation Reason for IT Visit</description>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Cancellation</fullName>
                </value>
                <value>
                    <fullName>Owner Missing</fullName>
                </value>
                <value>
                    <fullName>User Cancellation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Visit</fullName>
                </value>
                <value>
                    <fullName>Non-standard Visit</fullName>
                </value>
                <value>
                    <fullName>Non-client Visit</fullName>
                </value>
                <value>
                    <fullName>Sales Task Visit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visit (EU)</relationshipLabel>
        <relationshipName>Visit_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Country_Code__c</fullName>
        <formula>EUR_CRM_Account__r.EUR_CRM_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Customer_Response__c</fullName>
        <label>Customer Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_End_Datetime__c</fullName>
        <label>End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Event_Record_Id__c</fullName>
        <label>Event Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>3</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Level__c</fullName>
        <formula>IF(
ISBLANK(
 EUR_CRM_Account__r.EUR_CRM_Image_Level_Name__c),
TEXT( EUR_CRM_Account__r.EUR_CRM_PRS_Image_Level__r.EUR_CRM_Segmentation_IL_Aspect_Name__c) ,EUR_CRM_Account__r.EUR_CRM_Image_Level_Name__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Included_in_KPI_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Included in KPI Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_IsRecommendationSuccessful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommendation Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Latest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Latest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is populated by mobile when Visit for recommended Account is planned</description>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Is_visit_Finished__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(EUR_CRM_Status__c, &apos;Finished&apos;), ISPICKVAL(EUR_CRM_Status__c, &apos;Canceled&apos;),EUR_CRM_Start_Datetime__c  &lt;   DATETIMEVALUE(Today ()))
, true, false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is visit Finished?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Mobile_ID__c</fullName>
        <description>technical field represents Mobile ID from Convivio. Use for checking for data duplication</description>
        <label>Mobile ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Order_Block__c</fullName>
        <formula>TEXT(EUR_CRM_Account__r.EUR_CRM_Order_Block__c)</formula>
        <label>Order Block</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_RDLink__c</fullName>
        <description>CT Mobile RD Link</description>
        <label>RD Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Reason_for_visit_planning__c</fullName>
        <label>Reason for visit planning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Agreement Negotiation</fullName>
                </value>
                <value>
                    <fullName>Cash Collection</fullName>
                </value>
                <value>
                    <fullName>PVA</fullName>
                </value>
                <value>
                    <fullName>Canvas Presentation</fullName>
                </value>
                <value>
                    <fullName>Order Taking</fullName>
                </value>
                <value>
                    <fullName>Sell-out activities</fullName>
                </value>
                <value>
                    <fullName>Other activities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Start_Datetime__c</fullName>
        <label>Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status_Address_Mobile__c</fullName>
        <formula>TEXT(EUR_CRM_Status__c) +&apos; | &apos;+ EUR_CRM_AccountAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status/Address Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Saved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_Category__c</fullName>
        <label>Sub-Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free Goods Due</fullName>
                </value>
                <value>
                    <fullName>Merchandise Material Due</fullName>
                </value>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Rebuild Outlet</fullName>
                </value>
                <value>
                    <fullName>Special Salesforce</fullName>
                </value>
                <value>
                    <fullName>Telephone Contact</fullName>
                </value>
                <value>
                    <fullName>Yearly Negotiation</fullName>
                </value>
                <value>
                    <fullName>Phone/Video Conferencing Visits</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Placed an order</fullName>
                </value>
                <value>
                    <fullName>Examination</fullName>
                </value>
                <value>
                    <fullName>No licence</fullName>
                </value>
                <value>
                    <fullName>Marketing activity confirmation</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Summary__c</fullName>
        <label>Summary</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Data_Capture_EndDateTime__c</fullName>
        <label>Visit Data Capture End Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Data_Capture_StartDateTime__c</fullName>
        <label>Visit Data Capture Start Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit_Type__c</fullName>
        <formula>TEXT(EUR_CRM_Account__r.EUR_CRM_Visit_Type__c)</formula>
        <label>Visit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Potential__c</fullName>
        <formula>IF(
ISBLANK( 
TEXT(EUR_CRM_Account__r.EUR_CRM_Volume_Potential__r.EUR_CRM_Name__c)), TEXT(EUR_CRM_Account__r.EUR_CRM_PRS_Volume_Potential__r.EUR_CRM_Segmentation_VP_Aspect_Name__c)
 , TEXT(EUR_CRM_Account__r.EUR_CRM_Volume_Potential__r.EUR_CRM_Name__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volume Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_JB_Sub_Category__c</fullName>
        <label>Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EUR_CRM_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>telephone contact</fullName>
                </value>
                <value>
                    <fullName>off frequency</fullName>
                </value>
                <value>
                    <fullName>promo action (ON)</fullName>
                </value>
                <value>
                    <fullName>outside the database</fullName>
                </value>
                <value>
                    <fullName>competition (ON)</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>service center</fullName>
                </value>
                <value>
                    <fullName>POSM/WS goods issue</fullName>
                </value>
                <value>
                    <fullName>RSM meeting</fullName>
                </value>
                <value>
                    <fullName>new customer</fullName>
                </value>
                <value>
                    <fullName>administration</fullName>
                </value>
                <value>
                    <fullName>substitute for colleague</fullName>
                </value>
                <value>
                    <fullName>JB meeting</fullName>
                </value>
                <value>
                    <fullName>doctor appointment</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Free goods due</fullName>
                </value>
                <value>
                    <fullName>Merchandise material due</fullName>
                </value>
                <value>
                    <fullName>Yearly negotiation</fullName>
                </value>
                <value>
                    <fullName>Special salesforce</fullName>
                </value>
                <value>
                    <fullName>Rebuild Outlet</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Telesales account</fullName>
                </value>
                <value>
                    <fullName>New account</fullName>
                </value>
                <value>
                    <fullName>Stock Delivery</fullName>
                </value>
                <value>
                    <fullName>POS Delivery</fullName>
                </value>
                <value>
                    <fullName>Store Merchandising</fullName>
                </value>
                <value>
                    <fullName>Customer Meeting</fullName>
                </value>
                <value>
                    <fullName>Promo Activation</fullName>
                </value>
                <value>
                    <fullName>Phone/Video Conferencing Visits</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDLink__c</fullName>
        <description>CT Mobile RD Link</description>
        <label>RD Link</label>
        <type>Url</type>
    </fields>
    <label>Visit (EU)</label>
    <listViews>
        <fullName>All_AO_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_EndDateTime__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_StartDateTime__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.AO_Off_Trade_Visit,EUR_CRM_Visit__c.AO_On_Trade_Visit</value>
        </filters>
        <label>All AO Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_AT_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_EndDateTime__c</columns>
        <columns>EUR_CRM_Visit_Data_Capture_StartDateTime__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_AT_Visit</value>
        </filters>
        <label>EUR AT Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_AT</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_ONVisits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_BE_On_Trade_Visit</value>
        </filters>
        <label>EUR BE Visits ON</label>
        <language>en_GB</language>
        <sharedTo>
            <role>EMEA</role>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_Visits</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_BE_Off_Trade_Visit,EUR_CRM_Visit__c.EUR_BE_On_Trade_Visit,EUR_CRM_Visit__c.EUR_BE_Wholesaler_Visit</value>
        </filters>
        <label>EUR BE Visits</label>
        <language>en_GB</language>
        <sharedTo>
            <role>EMEA</role>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CCA_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_CCA_On_Trade_Visit</value>
        </filters>
        <label>EUR CCA Visitas</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CCA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_DK_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_DK_ON_Trade_Visit,EUR_CRM_Visit__c.EUR_DK_OFF_Trade_Visit</value>
        </filters>
        <label>All DK Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_FI_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <columns>EUR_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_FI_OFF_Trade_Visit,EUR_CRM_Visit__c.EUR_FI_On_Trade_Visit</value>
        </filters>
        <label>All FI Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_FI</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_Gb_Visit</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Sub_Category__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_GB_On_Trade_FS_Visit</value>
        </filters>
        <label>All GB Visits</label>
        <language>en_US</language>
        <sharedTo>
            <role>EUR_GB</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_All_ZA_Visit</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Category__c</columns>
        <columns>EUR_JB_Sub_Category__c</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>EUR_CRM_Actual_Time_Spent__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.ZA_Off_Trade_Visit,EUR_CRM_Visit__c.ZA_On_Trade_Visit</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Pravin</value>
        </filters>
        <filters>
            <field>EUR_CRM_Start_Datetime__c</field>
            <operation>equals</operation>
            <value>8/25/2020 12:00 AM</value>
        </filters>
        <label>EUR ZA Visit</label>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Visit_View</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Summary__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Geolocation__Latitude__s</columns>
        <columns>EUR_CRM_Geolocation__Longitude__s</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_BG_Off_Trade_Visit,EUR_CRM_Visit__c.EUR_BG_On_Trade_Visit</value>
        </filters>
        <label>EUR BG All Visit View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_Cancelled_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Canceled Visits</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_Finished_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Finished</value>
        </filters>
        <label>Finished Visits</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_In_Progress_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Status__c</field>
            <operation>equals</operation>
            <value>In progress</value>
        </filters>
        <label>In Progress Visits</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EUR_DO_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_DO_On_Trade_Visit</value>
        </filters>
        <label>EUR DO Visitas</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DO</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_GB_Visits</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Start_Datetime__c</columns>
        <columns>EUR_CRM_End_Datetime__c</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Visit__c.EUR_GB_Indies_Visit,EUR_CRM_Visit__c.EUR_GB_On_Trade_FS_Visit</value>
        </filters>
        <label>EUR GB Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_GB</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>VST-{0000000000}</displayFormat>
        <label>Visit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit (EU)</pluralLabel>
    <recordTypes>
        <fullName>AO_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>AO Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>AO_On_Trade_Visit</fullName>
        <active>true</active>
        <label>AO On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_AT_Visit</fullName>
        <active>true</active>
        <label>EUR AT Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BE Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BE On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BE_Wholesaler_Visit</fullName>
        <active>true</active>
        <label>EUR BE Wholesaler Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BG Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR BG On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Visit</fullName>
        <active>true</active>
        <label>EUR BG Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Wholesaler_Visit</fullName>
        <active>true</active>
        <label>EUR BG Wholesaler Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CCA_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR CCA Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CCA_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR CCA On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CCA_Wholesaler_Visit</fullName>
        <active>true</active>
        <label>EUR CCA Wholesaler Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR CH On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_On_Trade_Wholesaler_Visit</fullName>
        <active>true</active>
        <label>EUR CH On Trade Wholesaler Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CH_Visit</fullName>
        <active>true</active>
        <label>EUR CH Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_DE_On_Trade_Visit</fullName>
        <active>true</active>
        <description>DE On Trade Visit</description>
        <label>EUR DE On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_Off_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR DB Off Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DB_On_Trade_Visit</fullName>
        <active>true</active>
        <label>EUR DB On Trade Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Off_Trade_Visit</fullName>
        <active>true</active>
        <description>EUR DE Off Trade Visit</description>
        <label>EUR DE Off Trade Visit</label>
    </recordTypes>
</CustomObject>